# linear_framework

./: .gitignore  CMakeLists.txt  README.md  funs_linalg.c  funs_linalg.h  main.c  main_debug.c  main_factLU.c  main_frank.c  main_gauss.c  main_gaussLU.c  main_gaussRandTime.c  main_gausspiv.c  main_triinf.c  main_trisup.c
